Pause work on reproxied.